language/move-lang/tests/move_check/parser/expr_if_braces.move
module M {
    f(cond: bool) {
        // Braces required for control expression inside "if" expression
        if (cond) if (cond) ()
    }
}
